--- a/index.html
+++ b/index.html
@@ -37,11 +37,38 @@
             padding: 2px 4px;
             border-radius: 4px;
         }
+        .github-link {
+            text-align: center;
+            margin-top: 30px;
+        }
+        .github-link a {
+            display: inline-block;
+            background-color: #24292e;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+        .github-link a:hover {
+            background-color: #3a3a3a;
+        }
+        .contribute {
+            background-color: #fff3cd;
+            border: 1px solid #ffeeba;
+            padding: 15px;
+            border-radius: 5px;
+            margin-top: 30px;
+        }
     </style>
 </head>
 <body>
 <h1>ShellApiLogOptimizer</h1>
 <p>ShellApiLogOptimizer 是一款专为 ShellApi 设计的日志优化插件，旨在显著提升日志查询和统计的速度。</p>
+
+<div class="github-link">
+    <a href="https://github.com/akl7777777/ShellApiLogOptimizer" target="_blank">在 GitHub 上查看项目</a>
+</div>
 
 <h2>主要特性</h2>
 <div class="feature">
@@ -81,5 +108,19 @@
 
 <h2>贡献与支持</h2>
 <p>我们欢迎社区贡献和反馈。如果您在使用过程中遇到任何问题或有改进建议，请随时提出 issue 或 pull request。</p>
+
+<div class="contribute">
+    <h3>参与贡献</h3>
+    <p>我们热烈欢迎社区成员参与到 ShellApiLogOptimizer 的开发中来！无论是修复 bug、改进文档还是添加新功能，您的贡献都将使这个项目变得更好。</p>
+    <p>如何贡献：</p>
+    <ol>
+        <li>Fork 项目仓库</li>
+        <li>创建您的特性分支 (<code>git checkout -b feature/AmazingFeature</code>)</li>
+        <li>提交您的更改 (<code>git commit -m 'Add some AmazingFeature'</code>)</li>
+        <li>推送到分支 (<code>git push origin feature/AmazingFeature</code>)</li>
+        <li>创建一个 Pull Request</li>
+    </ol>
+    <p>我们期待您的贡献！</p>
+</div>
 </body>
 </html>
