--- a/index.html
+++ b/index.html
@@ -60,9 +60,40 @@
             border-radius: 5px;
             margin-top: 30px;
         }
+        .nav {
+            background-color: #2c3e50;
+            padding: 10px 0;
+            margin-bottom: 20px;
+        }
+        .nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            text-align: center;
+        }
+        .nav ul li {
+            display: inline;
+            margin: 0 10px;
+        }
+        .nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .nav ul li a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
+<nav class="nav">
+    <ul>
+        <li><a href="https://demo.shellapi.ltd/" target="_blank">ShellApi专业版演示站</a></li>
+        <li><a href="https://lite.shellapi.ltd/" target="_blank">ShellApi青春版演示站</a></li>
+        <li><a href="https://github.com/akl7777777/ShellApiLogOptimizer" target="_blank">ShellApiLogOptimizer</a></li>
+    </ul>
+</nav>
+
 <h1>ShellApiLogOptimizer</h1>
 <p>ShellApiLogOptimizer 是一款专为 ShellApi 设计的日志优化插件，旨在显著提升日志查询和统计的速度。</p>
 
